# AutoPaper

./: README.md  ai_researcher.py  arxiv_tool.py  image_tools.py  main.py  pyproject.toml  read_pdf.py  write_pdf.py
backend/: ai_researcher.py  arxiv_tool.py  pyproject.toml  write_dash.py
